config/network-policy/allow-metrics-traffic.yaml
# This NetworkPolicy allows ingress traffic
# with Pods running on namespaces labeled with 'metrics: enabled'. Only Pods on those
# namespaces are able to gather data from the metrics endpoint.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    control-plane: controller-manager
    app.kubernetes.io/name: blanketops-environments
    app.kubernetes.io/part-of: blanketops
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/version: v0.0.1
    environments.blanketops.dev/api-version: v0.2.9
    environments.blanketops.dev/contract-version: v0.5.4
    environments.blanketops.dev/controller-version: v0.6.1
    environments.blanketops.dev/operator-version: v0.8.2
    environments.blanketops.dev/type: dev
  name: allow-metrics-traffic
  namespace: system
spec:
  podSelector:
    matchLabels:
      control-plane: controller-manager
      app.kubernetes.io/name: blanketops-environments
  policyTypes:
  - Ingress
  ingress:
  # This allows ingress traffic from any namespace with the label metrics: enabled
  - from:
    - namespaceSelector:
        matchLabels:
          metrics: enabled # Only from namespaces with this label
    ports:
    - port: 8443
      protocol: TCP
